# tree-sitter-webvtt

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  analysis.txt  binding.gyp  build.sh  go.mod  grammar.js  meh  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-webvtt.pc.in
bindings/c/tree_sitter/: tree-sitter-webvtt.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_webvtt/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWebvttTests/: TreeSitterWebvttTests.swift
examples/: ex1.vtt  ex2.vtt  ex3.vtt  ex4.vtt  ex5.vtt  ex7.vtt  ex8.vtt  ex9.vtt  ex_chapters.vtt  temp.vtt
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comment_block.txt  cue_block.txt  region_definition_block.txt  style_block.txt  varying_number_terminators.txt  webvtt_block.txt
